# copart-scraper

./: .gitignore  LICENSE  README.MD  pyproject.toml  remove_task.bat  requirments.txt  setup.bat
copartscraper/: __main__.py  config.py  database.py  models.py  report_notifier.py  reporter.py  scraper.py
